src/objects/FieloAlpha__Section__c.object
<CustomObject>
    <description>Predetermined compartments that make up a page in the members’ portal. Components are placed in the sections.</description>
    <fields>
        <fullName>FieloPLT__CSSClasses__c</fullName>
        <label>CSS Classes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FieloPLT__ElementType__c</fullName>
        <label>Element type</label>
        <picklist>
            <picklistValues>
                <fullName>Header</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Main</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Footer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Div</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Article</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aside</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloPLT__IsBody__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is checked when the section is the one that contains the body por the page/template</description>
        <inlineHelpText>This field is checked when the section is the one that contains the body por the page/template</inlineHelpText>
        <label>Is Body</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Menu__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Menu</label>
        <referenceTo>FieloPLT__Menu__c</referenceTo>
        <relationshipLabel>Sections</relationshipLabel>
        <relationshipName>Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Orientation__c</fullName>
        <description>This field will contain the disposition of the section (horizontal or vertical)</description>
        <inlineHelpText>This field will contain the disposition of the section (horizontal or vertical)</inlineHelpText>
        <label>Orientation</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>FieloPLT__Section__c</referenceTo>
        <relationshipLabel>Sections</relationshipLabel>
        <relationshipName>Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Type__c</fullName>
        <label>Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Width__c</fullName>
        <label>Width</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Section</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Section Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>